# ai-study

./: .gitignore  CLAUDE.md  README.md  mypy.ini  requirements-dev.txt  requirements.txt  ruff.toml  try_it.py
day-04/: day-04-ai-chatbot.py
day-05-review/: day-05-review-and-refine.py
docs/: git-workflow.md
notes/: AI-Study-Comprehensive-Notes.docx  day-02-takeaway-notes.docx
week-01/ai_chatbot/: pyproject.toml
week-01/ai_chatbot/src/ai_chatbot/: async_chat.py  chat.py  chatbot.py  cli.py
week-01/ai_chatbot/src/ai_chatbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
week-02/: hello_claude.py  hello_groq.py  hello_llm.py  hello_ollama.py
week-03/: README.md  pyproject.toml
week-04/: .env.example  batch_eval.py  chain_of_thought.py  conversation.py  eval_mindset.py  few_shot.py  prompt_anatomy.py  prompt_runner.py  requirements.txt  structured_outputs.py  week-04-summary.md
week-05/: anthropic_provider.py  compare.py  groq_client.py  groq_provider.py  ollama_client.py  ollama_provider.py  openai_client.py  openai_provider.py  provider.py  requirements.txt  robust_client.py  run_all_providers.py  run_side_by_side.py  week-05-summary.md
week-06/: baseline.json  batch_runner.py  eval_dataset.py  eval_harness.py  eval_report.py  eval_types.py  exact_match.py  exercises_day04.py  llm_judge.py  regression_check.py  run_mini_eval.py  scored_compare.py  scratch.py  week-06-summary.md
week-07/: cost_dashboard.py  model_selection_notes.md  mypy.ini  retry_backoff.py  scratch.py  streaming_demo.py  week-07-summary.md
(+41 files in other folders)
