[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chatbot"
version = "0.1.0"
description = "A local LLM chatbot using Ollama"
requires-python = ">=3.10"
dependencies = ["httpx", "typer[all]"]

[project.scripts]
ai-chat-cli = "ai_chatbot.cli:app"
ai-chat = "ai_chatbot.chatbot:app"